--- a/app/css/app.css
+++ b/app/css/app.css
@@ -199,6 +199,43 @@ body {
   text-overflow: ellipsis;
 }
 
+.btnNewPattern {
+  display: inline-block;
+  position: relative;
+  width: 230px;
+  height: 120px;
+  margin: 10px;
+  padding: 0;
+  overflow: hidden;
+  color: #c7c7cc;
+  text-decoration: none !important;
+}
+.btnNewPattern:before {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.4em;
+  height: 1.4em;
+  margin: -0.7em 0 0 -0.7em;
+  padding: 0.2em;
+  background: rgba(199, 199, 204, 0.25);
+  border-radius: 50%;
+  font-size: 56px;
+  text-align: center;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.btnNewPattern:hover {
+  color: #fff;
+}
+.btnNewPattern:hover:before {
+  background: #5959cf;
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 /*
 # typography
 ** basic type module styles **
