updated new pattern button styles

--- a/app/partials/dash.html
+++ b/app/partials/dash.html
@@ -26,10 +26,10 @@
 						href="" ng-click="deletePattern(pattern.id)"></a>
 				</div>
 			</div>
-
 			<!-- button new pattern -->
-			<a class="btnNewPattern ion-plus-round" title="Add New Pattern"
-				href="" ng-click="newPattern()">
+			<a class="btnNewPattern hoverFlip" href="" ng-click="newPattern()">
+				<i class="icon ion-plus-round face front"></i>
+				<span class="label face back">New Pattern</span>
 			</a>
 		</div>
 	</div>
