--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -8,6 +8,7 @@
 //UI modules
 @import "modules/_typography.scss";
 @import "modules/_buttons.scss";
+@import "modules/_effects.scss";
 @import "modules/_forms.scss";
 @import "modules/_sections.scss";
 
