--- a/app/css/app.css
+++ b/app/css/app.css
@@ -245,38 +245,119 @@ p {
 .btnNewPattern {
   display: inline-block;
   position: relative;
-  width: 230px;
-  height: 120px;
-  margin: 10px;
+  width: 80px;
+  height: 80px;
+  margin: 30px;
   padding: 0;
   overflow: hidden;
   color: #c7c7cc;
   text-decoration: none !important;
 }
-.btnNewPattern:before {
+.btnNewPattern .icon,
+.btnNewPattern .label {
   display: block;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 1.4em;
-  height: 1.4em;
-  margin: -0.7em 0 0 -0.7em;
-  padding: 0.2em;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   background: rgba(199, 199, 204, 0.25);
   border-radius: 50%;
-  font-size: 56px;
   text-align: center;
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
 }
+.btnNewPattern .icon {
+  font-size: 56px;
+}
+.btnNewPattern .icon:before {
+  display: block;
+  line-height: 80px;
+}
+.btnNewPattern .label {
+  padding: 20px 0;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 600;
+}
 .btnNewPattern:hover {
   color: #fff;
 }
-.btnNewPattern:hover:before {
-  background: #5959cf;
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+.btnNewPattern:hover .icon,
+.btnNewPattern:hover .label {
+  background: #fc9436;
+}
+
+/*
+# Effects
+Pure CSS effects, including interactive transitions and animations
+*/
+/*
+## hover flip
+An element with two faces will flip upon hover
+*/
+.hoverFlip {
+  position: relative;
+}
+.hoverFlip .face {
+  position: absolute;
+  -webkit-perspective-origin: 50% 50%;
+  perspective-origin: 50% 50%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.hoverFlip .face.front {
+  -webkit-transform: perspective(400px) rotateY(0deg);
+  -ms-transform: perspective(400px) rotateY(0deg);
+  transform: perspective(400px) rotateY(0deg);
+  opacity: 1;
+}
+.hoverFlip .face.back {
+  -webkit-transform: perspective(400px) rotateY(-180deg);
+  -ms-transform: perspective(400px) rotateY(-180deg);
+  transform: perspective(400px) rotateY(-180deg);
+  opacity: 0;
+}
+.hoverFlip:hover .face.front {
+  -webkit-transform: perspective(400px) rotateY(-180deg);
+  -ms-transform: perspective(400px) rotateY(-180deg);
+  transform: perspective(400px) rotateY(-180deg);
+  opacity: 0;
+}
+.hoverFlip:hover .face.back {
+  -webkit-transform: perspective(400px) rotateY(0deg);
+  -ms-transform: perspective(400px) rotateY(0deg);
+  transform: perspective(400px) rotateY(0deg);
+  opacity: 1;
+}
+
+.hoverFlip.CCW .face.front {
+  -webkit-transform: perspective(400px) rotateY(0deg);
+  -ms-transform: perspective(400px) rotateY(0deg);
+  transform: perspective(400px) rotateY(0deg);
+  opacity: 1;
+}
+.hoverFlip.CCW .face.back {
+  -webkit-transform: perspective(400px) rotateY(180deg);
+  -ms-transform: perspective(400px) rotateY(180deg);
+  transform: perspective(400px) rotateY(180deg);
+  opacity: 0;
+}
+.hoverFlip.CCW:hover .face.front {
+  -webkit-transform: perspective(400px) rotateY(180deg);
+  -ms-transform: perspective(400px) rotateY(180deg);
+  transform: perspective(400px) rotateY(180deg);
+  opacity: 0;
+}
+.hoverFlip.CCW:hover .face.back {
+  -webkit-transform: perspective(400px) rotateY(0deg);
+  -ms-transform: perspective(400px) rotateY(0deg);
+  transform: perspective(400px) rotateY(0deg);
+  opacity: 1;
 }
 
 /*
