--- a/app/css/app.css
+++ b/app/css/app.css
@@ -221,25 +221,37 @@ p {
   width: 40px;
   opacity: 1;
 }
-.btnPattern.new:before {
-  content: 'new';
-  display: inline-block;
+.btnPattern > .tags {
+  display: block;
   position: absolute;
   top: -15px;
-  left: 0px;
-  width: auto;
-  max-width: 50%;
+  left: 0;
+  width: 100%;
   height: 15px;
   margin: 0;
-  padding: 0 4px;
+  padding: 0;
+  overflow: hidden;
   color: #fff;
-  background: #ff3838;
   font-size: 10px;
   line-height: 15px;
   text-transform: capitalize;
+}
+.btnPattern .tag {
+  display: inline-block;
+  width: auto;
+  max-width: 60px;
+  height: 15px;
+  margin: 0;
+  padding: 0 4px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+.btnPattern .tag.new {
+  background: #fc9436;
+}
+.btnPattern .tag.new:before {
+  content: 'New';
 }
 
 .btnNewPattern {
@@ -559,7 +571,7 @@ select:focus {
 .app-patterns-list {
   max-width: 1020px;
   margin: 0 auto;
-  padding: 40px 10px 10px 10px;
+  padding: 60px 10px 30px 10px;
   letter-spacing: -0.31em;
   text-rendering: auto;
   text-align: left;
