--- a/app/scss/modules/_buttons.scss
+++ b/app/scss/modules/_buttons.scss
@@ -167,25 +167,35 @@
 		}
 	}
 
-	//new
-	&.new {
-		&:before {
-			content: 'new';
-			display: inline-block;
-			position: absolute;
-			top: -15px;
-			left: 0px;
-			width: auto;
-			max-width: 50%;
-			height: 15px;
-			margin: 0;
-			padding: 0 4px;
-			color: #fff;
-			background: $ios7Red;
-			font-size: 10px;
-			line-height: 15px;
-			text-transform: capitalize;
-			@include text-truncate();
+	//tags
+	>.tags {
+		display: block;
+		position: absolute;
+		top: -15px;
+		left: 0;
+		width: 100%;
+		height: 15px;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		color: #fff;
+		font-size: 10px;
+		line-height: 15px;
+		text-transform: capitalize;
+	}
+	.tag {
+		display: inline-block;
+		width: auto;
+		max-width: 60px;
+		height: 15px;
+		margin: 0;
+		padding: 0 4px;
+		@include text-truncate();
+		&.new {
+			background: $ios7Orange;
+			&:before {
+				content: 'New';
+			}
 		}
 	}
 }
