added toDisplayTime filter

--- a/app/partials/dash.html
+++ b/app/partials/dash.html
@@ -14,12 +14,12 @@
 			<div class="btnPattern"
 				ng-repeat="pattern in patterns|objToArr|orderBy:'lastupdate':true track by pattern.id">
 				<div class="tags">
-					<span class="tag new" ng-class="{new:isNewPattern(pattern.lastupdate)}"></span>
+					<span class="tag new" ng-if="isNewPattern(pattern.lastupdate)"></span>
 				</div>
-				<span class="title" ng-bind="pattern.title"></span>
+				<a class="title" ng-bind="pattern.title" href="#pattern/{{::pattern.id}}"></a>
 				<span class="info repo"><b>Repo</b><span ng-bind="::pattern.repo"></span></span></span>
 				<span class="info author"><b>Author</b><span ng-bind="::pattern.author"></span></span>
-				<span class="info date"><b>Updated</b><span ng-bind="::pattern.lastupdate"></span></span>
+				<span class="info date"><b>Updated</b><span ng-bind="::pattern.lastupdate|toDisplayTime"></span></span>
 				<div class="actions">
 					<a class="btnAction view ion-eye" title="View/Edit"
 						href="#pattern/{{::pattern.id}}"></a>
