added basic animations and welcome text

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -17,6 +17,7 @@
 @import "views/_dash.scss";
 @import "views/_pattern.scss";
 @import "views/_settings.scss";
+@import "views/_animations.scss";
 
 //helpers and overrides
 @import "utils/_helpers.scss";
