--- a/app/scss/views/_appcontainer.scss
+++ b/app/scss/views/_appcontainer.scss
@@ -9,10 +9,13 @@
 .app-view {
 	display: block;
 	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 // view container
