--- a/app/scss/modules/_buttons.scss
+++ b/app/scss/modules/_buttons.scss
@@ -25,7 +25,7 @@
 	text-decoration: none!important;
 	&:hover,
 	&.active {
-		background:  darken($ios7Blue, 10%);
+		background:  darken($ios7Orange, 10%);
 	}
 }
 
