--- a/app/scss/modules/_buttons.scss
+++ b/app/scss/modules/_buttons.scss
@@ -206,7 +206,7 @@
 	position: relative;
 	width: 80px;
 	height: 80px;
-	margin: 30px;
+	margin: 30px 85px;
 	padding: 0;
 	overflow: hidden;
 	color: $ios7Silver;
