--- a/app/partials/pattern.html
+++ b/app/partials/pattern.html
@@ -1,12 +1,12 @@
 <!-- pattern container -->
 <div class="app-pattern" id="app-pattern_{{::pattern.id}}">
 	<!-- pattern editor -->
-	<div class="app-pattern-header">
+	<div class="app-pattern-header app-header cfix">
 		<div class="utils"><!--
-		--><span class="logo" title="Pattern Playground">
-			<img src="imgs/logo.svg" alt="" width="50" height="50">
-		</span><!--
-		--><a href="#home" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
+			--><span class="logo" title="Pattern Playground">
+				<img src="imgs/logo.svg" alt="" width="50" height="50">
+			</span><!--
+			--><a href="#home" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
 		--></div>
 		<div class="utils"><!--
 			--><a href="" class="btnIcon" title="Revert Updates"
