--- a/app/scss/views/_dash.scss
+++ b/app/scss/views/_dash.scss
@@ -26,7 +26,7 @@
 // header
 .app-dash-header {
 	top: 0;
-	height: 80px;
+	height: 60px;
 	color: #fff;
 	background: $ios7Orange;
 	z-index: 10;
@@ -38,7 +38,7 @@
 		left: 50%;
 		width: 100px;
 		height: 100px;
-		margin: 0 0 -40px -50px;
+		margin: 0 0 -60px -50px;
 		padding: 5px;
 		overflow: hidden;
 		background: #fff;
@@ -56,15 +56,23 @@
 
 // main
 .app-dash-main {
-	top: 80px;
+	top: 60px;
 	bottom: 0;
-	color: #000;
+	padding-top: 60px;
 	overflow: auto;
+	color: #000;
 }
 
 // footer
 .app-dash-footer {
 	display: none;
+}
+
+// intro
+.app-intro {
+	width: 300px;
+	margin: 30px auto;
+	text-align: center;
 }
 
 // patterns list
@@ -77,8 +85,8 @@
 
 	//self
 	max-width: 1020px;
-	margin: 0 auto;
-	padding: 60px 10px 30px 10px;
+	margin: 30px auto;
+	padding: 0 10px;
 
 	//layout
 	@include grid-inline-row();
