--- a/app/scss/views/_appcontainer.scss
+++ b/app/scss/views/_appcontainer.scss
@@ -58,3 +58,12 @@
 		}
 	}
 }
+
+// app content container
+// -------------------------------------------------------------------------------------------
+
+// main content
+.app-content-main {
+	max-width: 1020px;
+	margin: 30px auto;
+}
