--- a/app/scss/modules/_buttons.scss
+++ b/app/scss/modules/_buttons.scss
@@ -29,6 +29,62 @@
 	}
 }
 
+// btn Icon circle
+.btnIconCircle {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	margin: 10px;
+	padding: 0;
+	overflow: hidden;
+	color: $ios7Silver;
+	text-decoration: none!important;
+
+	//common
+	.icon,
+	.label {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		background: fade-out($ios7Silver, 0.75);
+		border-radius: 50%;
+		text-align: center;
+		@include transition( all, $transSpeed );
+	}
+
+	//icon
+	.icon {
+		font-size: 56px;
+		&:before {
+			display: block;
+			line-height: 80px;
+		}
+	}
+
+	//label
+	.label {
+		padding: 20px 0;
+		font-size: 16px;
+		line-height: 18px;
+		font-weight: 600;
+	}
+
+	//interactions
+	&:hover {
+		color: #fff;
+		.icon,
+		.label {
+			background: $ios7Orange;
+		}
+	}
+}
+
 // btn pattern
 .btnPattern {
 	display: inline-block;
@@ -196,62 +252,6 @@
 			&:before {
 				content: 'New';
 			}
-		}
-	}
-}
-
-// btn new pattern
-.btnNewPattern {
-	display: inline-block;
-	position: relative;
-	width: 80px;
-	height: 80px;
-	margin: 30px 85px;
-	padding: 0;
-	overflow: hidden;
-	color: $ios7Silver;
-	text-decoration: none!important;
-
-	//common
-	.icon,
-	.label {
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		margin: 0;
-		padding: 0;
-		background: fade-out($ios7Silver, 0.75);
-		border-radius: 50%;
-		text-align: center;
-		@include transition( all, $transSpeed );
-	}
-
-	//icon
-	.icon {
-		font-size: 56px;
-		&:before {
-			display: block;
-			line-height: 80px;
-		}
-	}
-
-	//label
-	.label {
-		padding: 20px 0;
-		font-size: 16px;
-		line-height: 18px;
-		font-weight: 600;
-	}
-
-	//interactions
-	&:hover {
-		color: #fff;
-		.icon,
-		.label {
-			background: $ios7Orange;
 		}
 	}
 }
