--- a/app/partials/pattern.html
+++ b/app/partials/pattern.html
@@ -3,18 +3,18 @@
 	<!-- pattern editor -->
 	<div class="app-pattern-header app-header cfix">
 		<div class="utils"><!--
-			--><span class="logo" title="Pattern Playground">
-				<img src="imgs/logo.svg" alt="" width="50" height="50">
-			</span><!--
-			--><a href="#home" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
+		--><a href="#home" class="logo" title="Pattern Playground">
+				<img src="imgs/logo.svg" alt="Playground brand logo">
+			</a><!--
+		--><a href="#home" class="btnIcon" title="Back to dashboard"><i class="icon ion-grid"></i></a><!--
 		--></div>
 		<div class="utils"><!--
-			--><a href="" class="btnIcon" title="Revert Updates"
-				ng-click="revert()"><i class="icon ion-ios-undo-outline"></i></a><!--
-			--><a href="" class="btnIcon" title="Save to cloud"
-				ng-click="save()"><i class="icon ion-ios-cloud-upload-outline"></i></a><!--
-			--><a href="" class="btnIcon" ng-class="{active: settingsActive}" title="Pattern Info"
-				ng-click="toggleSettings()"><i class="icon ion-ios-more-outline"></i></a><!--
+		--><a href="" class="btnIcon" title="Revert updates"
+			ng-click="revert()"><i class="icon ion-ios-undo-outline"></i></a><!--
+		--><a href="" class="btnIcon" title="Save to cloud"
+			ng-click="save()"><i class="icon ion-ios-cloud-upload-outline"></i></a><!--
+		--><a href="" class="btnIcon" ng-class="{active: settingsActive}" title="Pattern info"
+			ng-click="toggleSettings()"><i class="icon ion-ios-more-outline"></i></a><!--
 		--></div>
 		<h1 class="heading">
 			<span class="title" ng-bind="pattern.title"></span>
