--- a/app/scss/views/_appcontainer.scss
+++ b/app/scss/views/_appcontainer.scss
@@ -57,6 +57,14 @@
 			text-align: left;
 		}
 	}
+
+	//user profile
+	.profile {
+		display: block;
+		width: 100%;
+		height: auto;
+		margin: 0 auto;
+	}
 }
 
 // app content container
